@@ -3,6 +3,10 @@
 	Backported from mainline
 	2019-11-26  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/61414
+	* g++.dg/cpp0x/enum23.C: Remove xfail.
+	* g++.dg/cpp0x/enum28.C: New test.
+
 	PR tree-optimization/92644
 	* g++.dg/opt/pr92644.C: New test.
 
